@@ -82,7 +82,6 @@
     <Compile Include="Codegen\ICodeClass.cs" />
     <Compile Include="Codegen\ICodeMethod.cs" />
     <Compile Include="MiniZinc\ZincScalarType.cs" />
-    <Compile Include="MiniZinc\ZincTypeInstAndIdent.cs" />
     <Compile Include="IReadWriteable.cs" />
     <Compile Include="NameRegister.cs" />
     <Compile Include="INameRegister.cs" />
@@ -128,6 +127,9 @@
     <Compile Include="MiniZinc\Boxes\ZincAsExTiaBoxBase.cs" />
     <Compile Include="MiniZinc\Boxes\ZincTieBoxBase.cs" />
     <Compile Include="MiniZinc\Boxes\ZincAsBoxBase.cs" />
+    <Compile Include="MiniZinc\ZincTypeInstExprAndIdent.cs" />
+    <Compile Include="MiniZinc\Boxes\IZincIdTieBox.cs" />
+    <Compile Include="MiniZinc\Boxes\ZincIdTieBoxBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
