@@ -1,5 +1,12 @@
 2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* ZincVarDeclItem.cs:
+	* ZincTypeInstAndIdent.cs:
+	* ZincTypeInstExprAndIdent.cs:
+	* ZincTypeInstExpressionIdent.cs: 
+
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* ZincOutputItem.cs:
 	* ZincAssignItem.cs:
 	* ZincVarDeclItem.cs:
